<resources xmlns:tools="http://schemas.android.com/tools">


    <!-- FACEBOOK -->
    <string name="app_name">Go4Lunch-alx</string>
    <string name="facebook_app_id">2328560603927397</string>
    <string name="facebook_login_protocol_scheme">fb2328560603927397</string>
    <string name="facebook_application_id" translatable="false">2328560603927397</string>

    <!-- MAIN ACTIVITY -->
    <string name="error_not_connected">You must be connected !</string>
    <string name="error_authentication_canceled">Authentication canceled&#8230;</string>
    <string name="error_no_internet">No internet connection !</string>
    <string name="error_unknown_error">An error occurred&#8230;</string>
    <string name="connection_succeed">Authentication granted !</string>
    <string name="connection_failed">Authentication failure !</string>
    <string name="button_login_text_logged">See the profile</string>
    <string name="button_login_text_not_logged">Connection</string>


    <!-- BOTTOM NAVIGATION -->
    <string name="title_map">Map View</string>
    <string name="title_list">List View</string>
    <string name="title_mates">Workmates</string>
    <string name="title_activity_maps">Map</string>

    <!-- NAVIGATION DRAWER -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_yourlunch">YOUR LUNCH</string>
    <string name="navigation_settings">SETTINGS</string>
    <string name="navigation_logout">LOGOUT</string>
    <string name="navigation_logged_out">Logged out</string>
    <string name="notification_title">Lunch reminder</string>
    <string name="notification_body">See your selection for today</string>
    <string name="default_notification_channel_id">170177</string>
    <string name="no_selection">No restaurant selected yet for today !</string>

    <!-- TOOLBAR -->
    <string name="toolbar_title_hungry">I\'m Hungry!</string>
    <string name="toolbar_title_mates">Available workmates</string>
    <string name="hint_search_mate">Search workmate...</string>
    <string name="hint_search_rest">Search restaurant...</string>

    <!-- DETAIL ACTIVITY -->
    <string name="detail_act_call">CALL</string>
    <string name="detail_act_like">LIKE</string>
    <string name="detail_act_web">WEBSITE</string>
    <string name="detail_joining">is joining !</string>
    <string name="selected">Restaurant selected</string>

    <!-- ALERT DIALOG -->
    <string name="alert_dialog_title">How much did you like that place?</string>
    <string name="alert_dialog_button">RATE IT !</string>

    <!-- LIST VIEW -->
    <string name="no_opening">No opening hours</string>
    <string name="opened247">Opened 24/7</string>
    <string name="opens_at">Opens at </string>
    <string name="now_closed">Now closed</string>
    <string name="closed_today">Closed today</string>
    <string name="closing_soon">Closing soon</string>
    <string name="closes_at">Closes at </string>
    <string name="opened_until">Opened until </string>

    <!-- MATES VIEW -->
    <string name="eats_at"> eats at </string>
    <string name="not_decided"> has not decided yet</string>

    <!-- SETTINGS -->
    <string name="sort_of_list"> Sort of restaurant\'s list </string>
    <string name="notifs"> Notifications</string>
    <string name="sending_notifs"> Get daily notification</string>
    <string name="sort_dist"> Sort by distance </string>
    <string name="sort_rate"> Sort by rate</string>
    <string name="sort_attendants"> Sort by attendants</string>

    <!-- LOCATION PERMISSION -->
    <string name="rationale_location">This app needs access to your location to find restaurants nearby</string>
    <string name="perm_denied">The app won\'t run correctly until you manually add the location permission in your device settings</string>

    <!-- ERRORS -->
    <string name="failure_users">Failed to retrieve users data</string>
    <string name="failure_ratings">Failed to retrieve restaurant\'s ratings</string>
    <string name="error_api_url">Error in the Google Places request</string>
    <string name="error_connecting_api">Failed to connect to Google Places service</string>
    <string name="error_processing_result">Failed to process the restaurants found</string>

</resources>
