<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_mapview"
        android:enabled="true"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/title_map"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_listview"
        android:enabled="true"
        android:icon="@drawable/ic_view_list_black_24dp"
        android:title="@string/title_list"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_workmates"
        android:enabled="true"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/title_mates"
        app:showAsAction="ifRoom" />
</menu>