<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/activity_main_drawer_yourlunch"
            android:icon="@drawable/ic_yourlunch"
            android:color="#ffffff"
            android:title="@string/navigation_yourlunch" />
        <item
            android:id="@+id/activity_main_drawer_settings"
            android:icon="@drawable/ic_settings"
            android:color="#ffffff"
            android:title="@string/navigation_settings" />
        <item
            android:id="@+id/activity_main_drawer_logout"
            android:icon="@drawable/ic_logout"
            android:color="#ffffff"
            android:title="@string/navigation_logout" />
    </group>

</menu>