<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.go4lunchAlx.ui.map.MapViewFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.example.go4lunchAlx.ui.list.ListViewFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/navigation_mates"
        android:name="com.example.go4lunchAlx.ui.mates.MatesFragment"
        android:label="@string/title_mates"
        tools:layout="@layout/fragment_mates" />
</navigation>